--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -21,7 +21,7 @@
         <mat-menu #belowMenu="matMenu" yPosition="below">
 
             <button routerLink="/produto" mat-menu-item><i class="material-icons">shopping_basket</i>Produtos</button>
-            <button routerLink="/atendimento" mat-menu-item><i class="material-icons">
+            <button routerLink="/listarservico" mat-menu-item><i class="material-icons">
                 local_hospital</i>Antendimento</button>
         </mat-menu>
 
