--- a/src/app/view/cadasservicos/cadasservicos.component.css
+++ b/src/app/view/cadasservicos/cadasservicos.component.css
@@ -13,5 +13,9 @@ input {
 }
 
 button {
-    margin: 0px 4px 0px 0px;
+    margin: 0px 0px 0px 5px;
+}
+
+#foto {
+    padding: 0px 15px 0px 0px;
 }
