--- a/src/app/view/clientes/clientes.component.html
+++ b/src/app/view/clientes/clientes.component.html
@@ -6,7 +6,7 @@
         <form #userPost="ngForm" (ngSubmit)="onSubmit()">
             <br><br> <br><br>
 
-            <mat-toolbar class="b" fxLayoutAlign="center center">Cadastro</mat-toolbar>
+            <mat-toolbar class="b" fxLayoutAlign="center center">Seus Dados</mat-toolbar>
             <br><br>
             <br><br>
             <mat-form-field class="example-full-width">
@@ -96,7 +96,10 @@
 
             <br>
 
-            <div fxLayoutAlign="center center"> <button mat-raised-button type="submit" color="primary"><i class="material-icons">save</i>Salvar</button></div>
+            <div fxLayoutAlign="center center"> <button mat-raised-button color="primary"><i class="material-icons">reply</i>Voltar</button>
+                <button mat-raised-button type="submit" color="primary"><i class="material-icons">save</i>Salvar Alteraçoes</button>
+                <button mat-raised-button routerLink="/listarAnimal" color="primary"><i class="material-icons">library_books</i> Listar animais</button>
+            </div>
             <br><br>
 
         </form>
