--- a/src/app/view/atendimentolistar/atendimentolistar.component.html
+++ b/src/app/view/atendimentolistar/atendimentolistar.component.html
@@ -33,28 +33,18 @@
 
 
             </thead>
-            <tbody>
-                <tr *ngFor="let lista of lista  ">
-
-
-                    <td>{{lista.id_consuta}}</td>
-
-                    <td>{{lista.data_consulta}}</td>
-
-
-
-                    <td>{{lista.hoje}}</td>
-
-                    <td>{{lista.servicos}}</td>
-
-                    <td>{{lista.animal}}</td>
+            <tbody id="tabela">
 
 
 
 
 
 
-                </tr>
+
+
+
+
+
 
             </tbody>
 
