--- a/src/app/view/listarservico/listarservico.component.html
+++ b/src/app/view/listarservico/listarservico.component.html
@@ -5,14 +5,6 @@
         <div class="float-left">
             <h4>Lista de serviços</h4>
         </div>
-
-        <div class="float-right">
-
-
-            <button type="button" class="btn btn-primary" [routerLink]>Voltar</button>
-
-        </div>
-
     </div>
 
 
@@ -30,18 +22,22 @@
 
 
             </thead>
+
             <tbody>
+
                 <tr *ngFor="let lista of lista ">
+
 
 
                     <td>{{lista.descri_S}}</td>
 
                     <td>R$:{{lista.valor}}</td>
-                    <td></td>
+                    <td> <button type="button" onclick="onSubmit(lista.descri_S,lista.valor)" class="btn btn-primary">Voltar</button>
+                    </td>
+
                 </tr>
 
             </tbody>
-
 
         </table>
 
