--- a/src/app/view/cadasservicos/cadasservicos.component.html
+++ b/src/app/view/cadasservicos/cadasservicos.component.html
@@ -22,7 +22,7 @@
 
             <div class="custom-file">
                 <input type="file" (change)="onChange($event)" class="custom-file-input" id="customFile">
-                <label class="custom-file-label" for="customFile" id="fil">Choose file</label>
+                <label class="custom-file-label" for="customFile" id="fil">Foto do serviços</label>
             </div>
 
 
