--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,7 +20,7 @@
         <button mat-button [matMenuTriggerFor]="belowMenu"><i class="material-icons">store</i>Serviços</button>
         <mat-menu #belowMenu="matMenu" yPosition="below">
 
-            <button routerLink="/produto" mat-menu-item><i class="material-icons">shopping_basket</i>Produtos</button>
+            <button routerLink="/listarProduto" mat-menu-item><i class="material-icons">shopping_basket</i>Produtos</button>
             <button routerLink="/listarservico" mat-menu-item><i class="material-icons">
                 local_hospital</i>Antendimento</button>
         </mat-menu>
