--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,11 +7,11 @@
 
     </mat-card-title>
 
-
+    <br><br>
     <mat-card-subtitle fxLayoutAlign="center center" class="subtitle">
 
 
-        Sistema desenvolvido por eu mesmo!!!!!!!!
+        Pricipais serviços
 
     </mat-card-subtitle>
     <br><br><br>
@@ -21,8 +21,8 @@
                 <img [src]="images[0]" alt="Random first slide">
             </div>
             <div class="carousel-caption">
-                <h3>Floresta verdejante </h3>
-                <p> tolkien silmarillion.</p>
+                <h3> Tosa de cachorro </h3>
+
             </div>
         </ng-template>
         <ng-template ngbSlide>
@@ -30,8 +30,7 @@
                 <img [src]="images[1]" alt="Random second slide">
             </div>
             <div class="carousel-caption">
-                <h3>A Queda de Gondolin</h3>
-                <p>A cidade escondida</p>
+                <h3>Banho pet </h3>
             </div>
         </ng-template>
         <ng-template ngbSlide>
@@ -39,8 +38,8 @@
                 <img [src]="images[2]" alt="Random third slide">
             </div>
             <div class="carousel-caption">
-                <h3>Montanhas azuis</h3>
-                <p>Terra media</p>
+                <h3>Consulta veterinaria</h3>
+
             </div>
         </ng-template>
     </ngb-carousel>
