--- a/src/app/view/atendimentolistar/atendimentolistar.component.html
+++ b/src/app/view/atendimentolistar/atendimentolistar.component.html
@@ -14,7 +14,7 @@
     <div class="card-bady">
 
 
-        <table class="table table-hover">
+        <table id="minhaTabela" class="table table-hover">
 
             <thead>
                 <tr>
