--- a/src/app/view/clientes/clientes.component.html
+++ b/src/app/view/clientes/clientes.component.html
@@ -9,35 +9,39 @@
             <mat-toolbar class="b" fxLayoutAlign="center center">Seus Dados</mat-toolbar>
             <br><br>
             <br><br>
+            <h3>Nome</h3>
             <mat-form-field class="example-full-width">
-                <mat-label>Nome</mat-label>
-                <input fxLayoutAlign="center center" id="nome" matInput placeholder="Nome">
+                <mat-label>{{cliente.nome}}</mat-label>
+                <input fxLayoutAlign="center center" id="nome" matInput placeholder="Novo nome">
             </mat-form-field>
 
             <br><br>
+            <h3>cpf</h3>
             <mat-form-field class="example-full-width ">
-                <mat-label>cpf</mat-label>
+                <mat-label>{{cliente.cpf}}</mat-label>
                 <input fxLayoutAlign="center center" id="cpf" matInput placeholder="cpf">
             </mat-form-field>
 
 
 
             <br><br>
+            <h3>Email</h3>
             <mat-form-field class="example-full-width">
-                <mat-label>email</mat-label>
-                <input fxLayoutAlign="center center" matInput id="email" placeholder="email">
+                <mat-label>{{cliente.email}}</mat-label>
+                <input type="email" fxLayoutAlign="center center" matInput id="email" placeholder="email">
             </mat-form-field>
 
 
 
             <br><br>
+            <h3>Senha</h3>
             <mat-form-field class="example-full-width">
-                <mat-label>senha</mat-label>
-                <input type="password" fxLayoutAlign="center center" matInput id="senha" placeholder="senha">
+                <mat-label>{{cliente.senha}}</mat-label>
+                <input type="text" fxLayoutAlign="center center" matInput id="senha" placeholder="senha">
             </mat-form-field>
-
+            <h3>Telefone</h3>
             <mat-form-field class="example-full-width">
-                <mat-label>Telefone</mat-label>
+                <mat-label>{{cliente.telefones}}</mat-label>
                 <input type="number" fxLayoutAlign="center center" matInput id="telefone" placeholder="telefone">
             </mat-form-field>
 
@@ -47,8 +51,9 @@
             <br><br>
 
             <br><br>
+            <h3>Numero</h3>
             <mat-form-field class="example-full-width">
-                <mat-label>Numero</mat-label>
+                <mat-label>{{cliente.endereco.numero}}</mat-label>
                 <input type="number" fxLayoutAlign="center center" matInput id="numero" placeholder="Numero">
             </mat-form-field>
 
@@ -57,40 +62,46 @@
 
 
             <br><br>
+            <h3>Rua</h3>
             <mat-form-field class="example-full-width">
-                <mat-label>rua</mat-label>
+                <mat-label>{{cliente.endereco.numero}}</mat-label>
                 <input fxLayoutAlign="center center" id="rua" matInput placeholder="rua">
             </mat-form-field>
 
             <br><br>
+            <h3>Bairro</h3>
             <mat-form-field class="example-full-width ">
-                <mat-label>bairro</mat-label>
+                <mat-label>{{cliente.endereco.bairro}</mat-label>
                 <input fxLayoutAlign="center center " id="bairro" matInput placeholder="bairro ">
             </mat-form-field>
 
 
             <br><br>
+            <h3>Cidade</h3>
             <mat-form-field class="example-full-width ">
-                <mat-label>cidade</mat-label>
+                <mat-label>{{cliente.endereco.cidade}}</mat-label>
                 <input fxLayoutAlign="center center " id="cidade" matInput placeholder="cidade ">
             </mat-form-field>
 
             <br><br>
+            <h3>UF</h3>
             <mat-form-field class="example-full-width ">
-                <mat-label>uf</mat-label>
+                <mat-label>{{cliente.endereco.uf}}</mat-label>
                 <input fxLayoutAlign="center center " id="uf" matInput placeholder="uf ">
             </mat-form-field>
 
 
             <br><br>
+            <h3>CEP</h3>
             <mat-form-field class="example-full-width ">
-                <mat-label>cep</mat-label>
+                <mat-label>{{cliente.endereco.cep}}</mat-label>
                 <input fxLayoutAlign="center center " id="cep" matInput placeholder="cep ">
             </mat-form-field>
 
             <br><br>
+            <h3>Complemento</h3>
             <mat-form-field class="example-full-width ">
-                <mat-label>complemento</mat-label>
+                <mat-label>{{cliente.endereco.complemento}}</mat-label>
                 <input fxLayoutAlign="center center " id="complemento" matInput placeholder="complemento ">
             </mat-form-field>
 
